freest/test/prog/Invalid/Typing/LacksTypeSig/LacksTypeSig.fst
module LacksTypeSig where

foo x = x
